correção - adicionando o cabeçalho e o titulo

--- a/html_semantico/exercicio-html-semantico-trybe/index.html
+++ b/html_semantico/exercicio-html-semantico-trybe/index.html
@@ -7,6 +7,9 @@
     <title>Conheça o Stomatopoda</title>
   </head>
   <body>
-    <h1>"Soco a 80km/h: Conheça o Stomatopoda"</h1>
+    <header>
+        <h1>"Soco a 80km/h: Conheça o Stomatopoda"</h1>
+    </header>
+    
   </body>
 </html>
