--- a/html_semantico/exercicio-html-semantico-trybe/index.html
+++ b/html_semantico/exercicio-html-semantico-trybe/index.html
@@ -10,6 +10,12 @@
     <header>
         <h1>"Soco a 80km/h: Conheça o Stomatopoda"</h1>
     </header>
-    
+
+    <nav>
+        <a href="http://">Página Inicial</a>
+        <a href="http://">Sobre</a>
+        <a href="http://">Contato</a>
+    </nav>
+
   </body>
 </html>
