adicionando article de fatos interessantes

--- a/html_semantico/exercicio-html-semantico-trybe/index.html
+++ b/html_semantico/exercicio-html-semantico-trybe/index.html
@@ -17,5 +17,17 @@
         <a href="http://">Contato</a>
     </nav>
 
+    <article>
+        <h2>Fatos sobre o Stomatopoda</h2>
+
+        <ol>
+            <li>Possuem uma visão incrível;</li>
+            <li>Possuem um soco poderoso;</li>
+            <li>São exclusivamente carnívoros;</li>
+            <li>O segundo par de patas é muito desenvolvido.</li>
+            <li>Complexo sistema de visão de cores do mundo animal</li>
+        </ol>
+    </article>
+
   </body>
 </html>
