--- a/html_semantico/exercicio-html-semantico-trybe/index.html
+++ b/html_semantico/exercicio-html-semantico-trybe/index.html
@@ -29,5 +29,47 @@
         </ol>
     </article>
 
+    <section>
+        <h3>O Stomatopoda</h3>
+
+        <p>Stomatopoda (ou estomatópode), chamados popularmente de tamarutacas ou de lacraias-do-mar no Brasil, é uma ordem de crustáceos marinhos da subclasse Hoplocarida, que agrupa cerca de 400 espécies, caracterizadas principalmente pela morfologia da segunda pata torácica, que é modificada em apêndice subquelado, lembrando uma pata de louva-a-deus.</p>
+    </section>
+
+    <section>
+        <h4>Descrição</h4>
+
+        <p>Os estomatópodes são predadores ativos que caçam presas com o auxílio de um sentido de visão muito apurado e capaz de interpretar polarização no espectro ultravioleta e infravermelho.</p>
+
+        <h5>O modo de vida:</h5>
+        <p>São animais exclusivamente carnívoros, alimentando-se de camarões, caranguejos, moluscos, peixes e até mesmo outros da mesma ordem. O segundo par de patas, muito desenvolvido, é usado tanto para atacar a presa como para se defender. O urópodo, quando aberto, também funciona para defesa, como um escudo, fechando a galeria em que o animal esteja instalado. A fêmea desova no local onde se abriga e, em caso de perigo, enrola os ovos como uma bola, prendendo-os junto ao corpo até encontrar um abrigo mais protegido.</p>
+
+    </section>
+
+    <section>
+        <h4>Visão</h4>
+
+        <p>Esses animais possuem o mais complexo sistema de visão de cores do mundo animal, pois enxergam 12 cores primárias, correspondentes aos 12 pigmentos distintos presentes em sua retina.</p>
+    </section>
+
+    <section>
+        <h4>Curiosidades:</h4>
+
+        <p>As maiores esmagadoras, tais como exemplares de Odontodactylus scyllarus, são capazes de desferir um dos mais rápidos e violentos golpes do reino animal, um soco que pode apresentar a velocidade de um tiro calibre .22 (equivalente a 720 km/h) e uma pressão de impacto de 600 N/cm². 
+            Essa força esmagadora é a responsável pelo seu título de "lagosta-boxeadora" e é capaz de facilmente quebrar a carapaça de um caranguejo, as conchas duras e calcificadas de gastrópodes ou até mesmo quebrar o vidro reforçado de um aquário.</p>
+    </section>
+
+    <section>
+        <h4>Classificação Cientifica</h4>
+
+        <ul>
+            <li>Reino: Animalia</li>
+            <li>Filo: Arthropoda</li>
+            <li>Subfilo: Crustacea</li>
+            <li>Classe: Malacostraca</li>
+            <li>Subclasse: Hoplocarida</li>
+            <li>Ordem: Stomatopoda Latreille, 1817</li>
+        </ul>
+    </section>
+
   </body>
 </html>
