--- a/html_semantico/exercicio-html-semantico-trybe/index.html
+++ b/html_semantico/exercicio-html-semantico-trybe/index.html
@@ -92,5 +92,9 @@
         </iframe>
     </aside>
 
+    <footer>
+        Conteúdo compilado por: Marciel de Jesus Santana, 2026.
+    </footer>
+
   </body>
 </html>
