--- a/html_semantico/exercicio-html-semantico-trybe/index.html
+++ b/html_semantico/exercicio-html-semantico-trybe/index.html
@@ -12,9 +12,9 @@
     </header>
 
     <nav>
-        <a href="http://">Página Inicial</a>
-        <a href="http://">Sobre</a>
-        <a href="http://">Contato</a>
+        <a href="index.html">Página Inicial</a>
+        <a href="README.md" target="_blank">Sobre o projeto</a>
+        <a href="https://marcielsantana.github.io/" target="_blank">Contato</a>
     </nav>
 
     <article>
@@ -29,7 +29,7 @@
         </ol>
         
         <section>
-            <h3>O Stomatopoda</h3>
+            <h3 id="stomatopoda">O Stomatopoda</h3>
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b5/Odontodactylus_scyllarus1.jpg/250px-Odontodactylus_scyllarus1.jpg" alt="">
             
             <p>Stomatopoda (ou estomatópode), chamados popularmente de tamarutacas ou de lacraias-do-mar no Brasil, é uma ordem de crustáceos marinhos da subclasse Hoplocarida, que agrupa cerca de 400 espécies, caracterizadas principalmente pela morfologia da segunda pata torácica, que é modificada em apêndice subquelado, lembrando uma pata de louva-a-deus.</p>
